added more mappings #250